# RustySNES

./: .coderabbit.yaml  .editorconfig  .gitignore  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  NOTICE  README.md  clippy.toml  deny.toml  mkdocs.yml  ref-proj  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md  agy-review.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: antigravity-review.yml  ci.yml  ios.yml  pages.yml  pgo.yml  release-auto.yml  release.yml  security.yml  web.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
assets/RustySNES_Icon_Pack/: README.md  generate_icons.py  make_transparent.py
crates/rustysnes-android/: Cargo.toml
crates/rustysnes-android/src/: lib.rs
crates/rustysnes-android/tests/: blit_wgsl.rs
crates/rustysnes-apu/: CLAUDE.md  Cargo.toml
crates/rustysnes-apu/benches/: apu_bench.rs
crates/rustysnes-apu/src/: dsp.rs  lib.rs  nostd_math.rs  psw.rs  spc700.rs  spc700_exec.rs
crates/rustysnes-apu/tests/: dsp_unit.rs
crates/rustysnes-cart/: CLAUDE.md  Cargo.toml
crates/rustysnes-cart/benches/: cart_bench.rs
crates/rustysnes-cart/src/: board.rs  header.rs  lib.rs  tier.rs
crates/rustysnes-cart/src/coproc/: armv3.rs  cx4.rs  dsp1.rs  epsonrtc.rs  gsu.rs  hg51b.rs  hg51b_instructions.rs  mod.rs  necdsp_variant.rs  obc1.rs  sa1.rs  sdd1.rs  sharprtc.rs  spc7110.rs  superfx.rs  upd77c25.rs
crates/rustysnes-cart/src/coproc/armv3/: board.rs  bus.rs  cpu.rs  mod.rs  primitives.rs  regs.rs
crates/rustysnes-cart/src/coproc/sdd1/: decompressor.rs
crates/rustysnes-cart/src/coproc/spc7110/: decompressor.rs
crates/rustysnes-cheevos/: Cargo.toml  build.rs  static_asserts.c
crates/rustysnes-cheevos/src/: client.rs  events.rs  ffi.rs  http.rs  lib.rs  memory.rs  util.rs
crates/rustysnes-core/: Cargo.toml
crates/rustysnes-core/benches/: headless_frame.rs  save_state_cost.rs
crates/rustysnes-core/src/: bus.rs  cheat.rs  controller.rs  dma.rs  dma_bus.rs  facade.rs  lib.rs  movie.rs  sa1_bus.rs  scheduler.rs  watchpoint.rs
crates/rustysnes-core/tests/: mid_scanline_hdma_baseline.rs
crates/rustysnes-cpu/: CLAUDE.md  Cargo.toml
crates/rustysnes-cpu/benches/: cpu_bench.rs
crates/rustysnes-cpu/src/: addr.rs  bus.rs  disasm.rs  exec.rs  lib.rs  regs.rs  tests.rs
crates/rustysnes-frontend/: Cargo.toml
crates/rustysnes-frontend/src/: app.rs  audio.rs  audio_core.rs  cheats.rs  cheevos.rs  cli.rs  config.rs  debug_snapshot.rs  emu.rs  emu_thread.rs  gfx.rs  hd_compositor.rs  hd_pack.rs  help_tui.rs  input.rs  lib.rs  main.rs  netplay.rs  pacing.rs  peripherals.rs  present_buffer.rs  rewind.rs  save_states.rs  ui_shell.rs  wasm.rs  wasm_audio.rs  wasm_winit.rs  watchpoints.rs
crates/rustysnes-frontend/src/debugger/: apu_panel.rs  cart_panel.rs  cpu_panel.rs  doc_panel.rs  memory_compare_panel.rs  mod.rs  ppu_panel.rs  rom_info_panel.rs  watch_panel.rs
crates/rustysnes-frontend/tests/: capture_smw.rs  playable_smoke.rs
crates/rustysnes-frontend/web/: Trunk.toml  index.html  manifest.webmanifest  sw.js
crates/rustysnes-gfx-shaders/: Cargo.toml
crates/rustysnes-gfx-shaders/src/: lib.rs
crates/rustysnes-ios/: Cargo.toml
crates/rustysnes-ios/src/: lib.rs
crates/rustysnes-libretro/: Cargo.toml
crates/rustysnes-libretro/src/: lib.rs
crates/rustysnes-mobile/: Cargo.toml
crates/rustysnes-mobile/src/: lib.rs
crates/rustysnes-monetization/: Cargo.toml
crates/rustysnes-monetization/src/: lib.rs
crates/rustysnes-netplay/: Cargo.toml
crates/rustysnes-netplay/src/: lib.rs  message.rs  rng.rs  session.rs  transport.rs  udp.rs  webrtc.rs
crates/rustysnes-netplay/tests/: determinism.rs
crates/rustysnes-ppu/: CLAUDE.md  Cargo.toml
crates/rustysnes-ppu/benches/: ppu_bench.rs
crates/rustysnes-ppu/src/: bus.rs  hdtag.rs  lib.rs  regs.rs  render.rs
crates/rustysnes-savestate/: Cargo.toml
crates/rustysnes-script/: Cargo.toml
crates/rustysnes-script/src/: lib.rs
crates/rustysnes-test-harness/: Cargo.toml
crates/rustysnes-test-harness/src/: accuracy_battery.rs  golden_log.rs  lib.rs  runner.rs  visual.rs
crates/rustysnes-test-harness/tests/: accuracysnes.rs  accuracysnes_scenes.rs  blargg_spc.rs  commercial_screenshots.rs  cpu_oracle.rs  dsp1_oncart.rs  gilyon_oncart.rs  mapper_tier_honesty.rs  movie_determinism.rs  parse_yoshi.rs  run_star_fox_screens.rs  sa1_oncart.rs  save_state_backward_compat.rs  save_state_determinism.rs  spc700_oracle.rs  superfx_oncart.rs  trace.rs  undisbeliever_golden.rs
docs/: DOCUMENTATION_INDEX.md  SALVAGE_MANIFEST.md  STATUS.md  accuracy-ledger.md  accuracysnes-coverability-audit-2026-07-23.md  accuracysnes-coverage.md  accuracysnes-plan.md  accuracysnes-research-dossier.md  accuracysnes-timing-oracle.md  apu.md  architecture.md  benchmarks.md  cart.md  cartridge-format.md  compatibility.md  cpu.md  frontend.md  glossary.md  libretro.md  mobile-readiness.md  performance.md  ppu.md  rom-test-corpus.md  scheduler.md  st018-arm-notes.md  testing-strategy.md
docs/adr/: 0001-master-clock-lockstep-scheduler.md  (+13 more)
ios/: project.yml
raw/: 65816-opcodes.html  parsed.json  repo_api.json
ref-docs/: 2026-06-24-apu.md  2026-06-24-coprocessors.md  2026-06-24-ppu.md  2026-07-19-accuracysnes-hardware-test-design.md  2026-07-20-undisbeliever-65816-timing.md  2026-07-20-wdc-w65c816s-citation.md  2026-07-22-anomie-snes-timing.md  2026-07-22-nesdev-snes-timing.md  README.md  research-report.md
screenshots/: README.md
scripts/: _agy_print.sh  agy-review.sh  bench_regression_check.sh  build-ios-xcframework.sh  check_plot.py  check_png.py  check_ppm.py  dma_dump.py  dma_dump.rs  dma_gp.py  dma_hack.py  fix_gsu_math.py  get_char.py  get_flush.py  get_gp.py  get_hdma.py  get_plot.py  get_ram_len.py  make_png.py  parse_title.rs  perdot_capture.lua  perdot_crossval.sh  snesdev_wiki_mirror.py  wasm_size_budget.sh
to-dos/: LOCKSTEP-CHECKLIST.md  ROADMAP.md  TIER1-CYCLE-ACCURACY.md  VERSION-PLAN.md
(+353 files in other folders)
