[workspace]
resolver = "2"
members = [
    "crates/rustysnes-savestate",
    "crates/rustysnes-core",
    "crates/rustysnes-cpu",
    "crates/rustysnes-ppu",
    "crates/rustysnes-apu",
    "crates/rustysnes-cart",
    "crates/rustysnes-netplay",
    "crates/rustysnes-cheevos",
    "crates/rustysnes-script",
    "crates/rustysnes-frontend",
    "crates/rustysnes-test-harness",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
authors = ["DoubleGate <parobek@gmail.com>"]
repository = "https://github.com/doublegate/RustySNES"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
