[package]
name = "rustysnes-android"
description = "RustySNES: Android JNI presentation host (wgpu-on-Surface, no emulation logic)"
version = "1.20.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["snes", "emulator", "android", "jni", "wgpu"]
categories = ["emulators", "games"]

[lib]
# Android's JNI loader needs `cdylib`. `rlib` is kept for workspace-graph consistency with
# `rustysnes-mobile`'s identical shape.
#
# This crate DOES now check on a plain host target, and deliberately so. `ndk-sys` hard-gates
# itself to Android (`compile_error!` on any other target), which used to make
# `cargo clippy --workspace` fail on every developer machine and in CI -- a permanently-red gate
# that everyone learned to read past, which is worse than no gate. The Android-only dependencies
# are now scoped to `cfg(target_os = "android")` below and the JNI surface is `cfg`-gated in
# `lib.rs`, so on a host this crate builds to an empty library and the workspace lint job is
# genuinely green. `cargo ndk -t <abi> build` is unaffected: on a real Android triple the cfg is
# true and every dependency and entry point is present exactly as before.
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# `rustysnes-mobile` owns the actual emulation core + its own UniFFI bridge (ROM load, run_frame,
# input, save state); this crate is presentation-only -- it never touches `EmuCore` directly, only
# the `(RGBA8 bytes, width, height)` the Kotlin side already reads via `MobileCore::framebuffer`/
# `frame_size` and hands down through JNI each frame. Depending on it here is for the shared
# `rustysnes-gfx-shaders` re-export convenience only (see `gfx-shaders` below) -- there is no
# `EmuCore` usage in this crate.
rustysnes-gfx-shaders = { path = "../rustysnes-gfx-shaders", version = "1.4.0" }
# Pinned to 0.21, NOT bumped to align with `rustysnes-frontend`'s transitive `jni 0.22.4` (an
# earlier attempt at this, found in review): 0.22 is a breaking API change (`JNIEnv` split into
# `Env`/`EnvUnowned`, `get_native_interface`/`get_array_length`/`get_byte_array_region` all
# renamed or restructured) that touches every `Java_*` entry point in this file. Migrating it
# under this bug-fix PR risked re-introducing a real, on-device-only regression in code already
# verified working on a real device -- the two `jni` majors staying separate in `Cargo.lock` is a
# minor dependency-duplication cost, not a functional bug; a deliberate 0.22 migration is better
# scoped to its own follow-up.
# `ndk` 0.9's `NativeWindow::from_surface` is the documented, standard way to turn a JNI-passed
# `android.view.Surface` into an `ANativeWindow` wgpu can build a real rendering surface from.
log = "0.4"

# Everything the JNI presentation host itself needs. Scoped to Android because `ndk` pulls
# `ndk-sys`, which refuses to compile for any other target -- and because none of these are
# reachable on a host once `lib.rs` gates its contents.
[target.'cfg(target_os = "android")'.dependencies]
# Pinned to 0.21, NOT bumped to align with `rustysnes-frontend`'s transitive `jni 0.22.4` (an
# earlier attempt at this, found in review): 0.22 is a breaking API change (`JNIEnv` split into
# `Env`/`EnvUnowned`, `get_native_interface`/`get_array_length`/`get_byte_array_region` all
# renamed or restructured) that touches every `Java_*` entry point. Migrating it under a bug-fix
# PR risked re-introducing a real, on-device-only regression in code already verified working on a
# real device; a deliberate 0.22 migration is better scoped to its own follow-up.
jni = "0.21"
# `ndk` 0.9's `NativeWindow::from_surface` is the documented, standard way to turn a JNI-passed
# `android.view.Surface` into an `ANativeWindow` wgpu can build a real rendering surface from.
ndk = "0.9"
raw-window-handle = "0.6"
wgpu = "29"
pollster = "0.4"
bytemuck = "1"
android_logger = "0.15"

[dev-dependencies]
naga = { version = "29", features = ["wgsl-in"] }
