[package]
name = "rustysnes-apu"
version = "1.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
bitflags = "2"
rustysnes-savestate = { path = "../rustysnes-savestate", version = "1.3.0" }

[lints]
workspace = true
