[package]
name = "rustysnes-apu"
version = "1.7.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
bitflags = "2"
rustysnes-savestate = { path = "../rustysnes-savestate", version = "1.4.0" }

[lints]
workspace = true
