[package]
name = "rustysnes-cart"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
bitflags = "2"
thiserror = { version = "2", default-features = false }
rustysnes-savestate = { path = "../rustysnes-savestate", version = "0.1.0" }

[lints]
workspace = true
