[package]
name = "rustysnes-cheevos"
description = "Native-only RetroAchievements (rcheevos) FFI wrapper for RustySNES"
version = "1.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[build-dependencies]
cc = "1"

# HTTP transport is native-only. The whole crate body is gated on
# `cfg(not(target_arch = "wasm32"))`, so a wasm workspace build sees an
# empty crate and never pulls these in.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3", default-features = false, features = ["rustls"] }
