[package]
name = "rustysnes-core"
version = "1.14.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
# Gates the `facade` module (`EmuCore`, needs `zip` archive extraction) — vanishes entirely from
# the `no_std` build (`--no-default-features`, the thumbv7em CI gate).
std = ["dep:zip"]
# `v0.8.0`, T-81-001b: 65C816 read/write memory watchpoints (`watchpoint.rs`). Off by default so
# a shipped build carries zero extra code on the accuracy-critical `Bus::read24`/`write24` path —
# see that module's own doc for the discipline this matches (`cheat.rs`'s read intercept).
debug-hooks = []
# `v1.3.0`: propagates down to `rustysnes-ppu/hd-pack` (the `TileTag` recording hook). This crate
# has no HD-pack code of its own -- `Bus::ppu` and `System::bus` are both already `pub`, so the
# frontend reaches `Ppu::set_hd_pack_tagging`/`Ppu::tile_tags` directly via
# `EmuCore::system_mut().bus.ppu` once this feature enables them to exist at all.
hd-pack = ["rustysnes-ppu/hd-pack"]

[dependencies]
rustysnes-cpu = { path = "../rustysnes-cpu", version = "1.4.0", default-features = false }
rustysnes-ppu = { path = "../rustysnes-ppu", version = "1.4.0", default-features = false }
rustysnes-apu = { path = "../rustysnes-apu", version = "1.4.0", default-features = false }
rustysnes-cart = { path = "../rustysnes-cart", version = "1.4.0", default-features = false }
rustysnes-savestate = { path = "../rustysnes-savestate", version = "1.4.0" }
thiserror = { version = "2", default-features = false }
# ROM-identity hashing for TAS movies (`movie.rs`) — already resolved transitively (via `zip` in
# the frontend), so this promotes an existing dependency to direct rather than adding a new one
# to the dependency tree. `default-features = false` keeps it `no_std`-clean for the thumbv7em
# gate (no heap allocation needed for a fixed-size hash).
sha2 = { version = "0.10", default-features = false }
# Zip-archive ROM extraction for the `facade` module (`std`-only) — matches the frontend's own
# pin so both crates resolve to the same `zip` version in the workspace lockfile.
zip = { version = "8.6.0", optional = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "headless_frame"
harness = false

[[bench]]
name = "save_state_cost"
harness = false

[lints]
workspace = true
