[package]
name = "rustysnes-frontend"
description = "RustySNES: cross-platform SNES emulator binary (winit + wgpu + cpal + egui)"
version = "1.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["snes", "emulator", "super-nintendo", "wgpu", "cpal"]
categories = ["emulators", "games"]

[lib]
name = "rustysnes_frontend"
path = "src/lib.rs"
# `cdylib` produces the `.wasm` artifact that wasm-bindgen + trunk consume to
# ship the browser frontend; `rlib` keeps the regular crate-graph integration
# so the `[[bin]]` below depends on the lib without duplicating sources.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rustysnes"
path = "src/main.rs"

[features]
# Two wasm32 frontends; exactly one is compiled (each provides a unique
# `#[wasm_bindgen(start)]`, feature-gated in `lib.rs` so they can't collide).
# `wasm-winit` (default, T-81-006) routes the browser through the SAME `App`/
# `ApplicationHandler`/`Gfx`/egui shell native uses (`app.rs`, `wasm_winit.rs`)
# — the full winit + wgpu + egui experience. `wasm-canvas` (T-81-005) is a
# lighter canvas-2D-only fallback embed (`wasm.rs`), independently functional.
# `emu-thread` runs single-player frame production off the winit thread (native
# only; inert on wasm). `help-tui` adds the ratatui terminal help browser.
#
# `emu-thread` is still OFF in `default` as of `v1.1.0`. `rustysnes-cart::Board` is `Send` (the
# RustyNES `Mapper: Send` rule), so `EmuCore: Send` holds and the feature compiles/tests/lints
# clean. `v1.1.0` closed the biggest gap — the thread now has real audio output
# (`crate::audio::AudioProducer`, pushed once per produced frame) and a proper pause/ROM-loaded
# lifecycle (`crate::emu_thread::EmuControl`) instead of an independent, uncontrollable pacing
# loop — but it is still NOT full parity with the synchronous in-`render` drive: none of
# `app.rs`'s per-real-frame side machinery (cheats, watchpoints, breakpoints, port2 peripheral
# live input, run-ahead, rewind recording, TAS movie apply/record, Lua script pump,
# RetroAchievements, netplay-aware pause) is ported into the thread's loop yet — each needs a new
# shared-mutable-state design (those lists/buffers are currently plain `Active` fields the UI
# edits directly) rather than a mechanical port, and is left as a scoped, documented follow-up
# (`crates/rustysnes-frontend/src/emu_thread.rs`'s own module doc has the exact list). Promoting
# this to `default` before that parity work lands would silently drop those features for anyone
# building the default binary. Opt in explicitly (`--features emu-thread`) for the
# reduced-input-latency benefit on vanilla single-player play with sound, with no
# cheats/watchpoints/breakpoints/run-ahead/rewind/movies/scripting/netplay/RetroAchievements in
# use.
default = ["wasm-winit", "help-tui"]
wasm-winit = []
wasm-canvas = []
emu-thread = ["dep:libc"]
help-tui = ["dep:ratatui"]

# The debugger overlay (live CPU/PPU/APU/Cart state viewers, `docs/frontend.md` §Debugger
# overlay). `v0.8.0` T-81-001b adds read/write watchpoints on top, which also needs the
# `rustysnes-core` side of the gate (the Bus-level hook lives there, not just this crate's UI).
debug-hooks = ["rustysnes-core/debug-hooks"]
# `v1.3.0`: HD texture pack support -- the `pack.toml` manifest schema (`hd_pack.rs`), the pack
# loader + PNG decode + per-ROM discovery (`hd_pack.rs`), and the pure compositor function
# (`hd_compositor.rs`). Propagates to `rustysnes-core/hd-pack` (which propagates in turn to
# `rustysnes-ppu/hd-pack`) so `EmuCore::system_mut().bus.ppu`'s tagging hook actually exists.
# Wiring the compositor into the live wgpu present path + the Settings UI pack selector are a
# follow-up (`gfx.rs`/`ui_shell.rs` are unchanged so far).
hd-pack = ["dep:png", "rustysnes-core/hd-pack"]
# `v0.8.0 "Instrumentation"`, T-81-002: sandboxed Lua scripting (`rustysnes-script`, native-only —
# `dep:` keeps the optional dependency out of the wasm32 dependency graph even if this feature
# were ever selected there, on top of the `target.'cfg(...)'` gate below already doing so).
scripting = ["dep:rustysnes-script"]
# `v0.8.0 "Instrumentation"`, T-81-003: Game Genie / Pro Action Replay cheat-code support (the
# decode logic lives unconditionally in `rustysnes-core::cheat`, same as the `movie` module —
# this flag gates only the frontend's cheat list + UI + per-frame application). No optional
# dependency and no `target_arch` gate — decode is pure computation, unlike `scripting`'s `mlua`.
cheats = []
# `v0.8.0 "Community"`, T-82-002: GGPO-style rollback netplay (`rustysnes-netplay`). The frontend
# wiring here is native-only (UDP, a real socket-based peer connection entered by address) — the
# crate's `WebRtcTransport` is itself complete and wasm32-clippy-verified against the real
# `web_sys` API, but the browser-side SDP-negotiation UI (async offer/answer/ICE exchange) is a
# genuinely separate scope of frontend work, honestly deferred rather than half-wired. `dep:`
# keeps the optional dependency out of the wasm32 dependency graph, on top of the
# `target.'cfg(...)'` gate below already doing so.
netplay = ["dep:rustysnes-netplay"]
# `v0.8.0 "Community"`, T-82-003: RetroAchievements (`rustysnes-cheevos`, the vendored `rcheevos`
# `rc_client` FFI bridge). Native-only — `rcheevos` needs a C toolchain and `std`, and the wasm
# builds have no supported HTTP worker thread for the RA server calls. `dep:` keeps the optional
# dependency out of the wasm32 dependency graph, on top of the `target.'cfg(...)'` gate below.
retroachievements = ["dep:rustysnes-cheevos"]

# `v1.0.0` — the "cargo --full equivalent" (ported from RustyNES's own `full` feature +
# `cargo full-build`/`full-run` aliases in `.cargo/config.toml`). Aggregates every NATIVE opt-in
# feature into one flag; purely additive on top of `default` — cargo merges `--features full`
# with this crate's own `default` set automatically, so this list does NOT re-list `wasm-winit`/
# `help-tui` (both already default). `wasm-canvas` is excluded (mutually exclusive with the
# default `wasm-winit`, and wasm-only anyway — `full` targets a native binary). `emu-thread` is
# ALSO excluded: it is not yet feature-complete (see its own comment above — no audio output, and
# combining it with `scripting` specifically fails today with `-D warnings` dead-code errors,
# since `scripting`'s synchronous-path-only helpers become unreachable once `emu-thread`'s
# separate loop takes over frame production) — including it here would make `full` simply not
# compile, the opposite of "maximal working build".
full = ["debug-hooks", "scripting", "cheats", "netplay", "retroachievements", "hd-pack"]

[lints]
workspace = true

[dependencies]
rustysnes-core = { path = "../rustysnes-core", version = "1.2.0" }
rustysnes-savestate = { path = "../rustysnes-savestate", version = "1.2.0" }

# winit + wgpu + cpal + egui shell. Versions tracked to the latest published,
# mutually-compatible tier (2026-06): egui/egui-wgpu/egui-winit 0.35, wgpu 29
# (the newest major egui-wgpu 0.35 builds against), winit 0.30 (the newest
# winit egui-winit 0.35 supports — winit 0.31 is beta-only and egui-winit
# pins to 0.30, so winit is the crate gating us off 0.31).
winit = "0.30"
wgpu = { version = "29", features = ["webgl"] }
cpal = "0.18"
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = { version = "0.35", default-features = false, features = ["links", "wayland", "x11"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

# HD texture pack tile image decode (`v1.3.0`, `hd-pack` feature) -- pure-Rust PNG decoder, no
# system libpng dependency, so this stays cross-platform (and wasm32-buildable, though the
# feature has no filesystem discovery path there yet -- `hd_pack.rs`'s own module doc has detail).
png = { version = "0.18", optional = true }

# Already transitive deps of wgpu; direct here is free.
pollster = "0.4"
bytemuck = "1"
web-time = "1.1"

# Archive-wrapped ROM support (`.zip`, the common commercial-ROM distribution format):
# `EmuCore::load_rom` sniffs the local-file-header magic and transparently extracts the first
# `.sfc`/`.smc`/`.fig`/`.swc` entry before header detection. Pure in-memory (a `Cursor` over the
# already-loaded byte slice, no filesystem access), so this works identically on native and
# wasm32. `deflate` only (no `zstd`/`lzma`/`bzip2`) — the format essentially every SNES ROM zip
# in the wild uses; the default `flate2` backend is pure Rust, so this stays wasm-compatible with
# no system zlib dependency.
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

# Native-only deps (gilrs/rfd/directories/clap/ratatui/rustysnes-script). A browser tab has no
# gamepad-via-gilrs, no rfd dialog, no terminal, and `mlua`'s vendored Lua VM needs a C compiler +
# `std` — the wasm builds never see these (the modules are `cfg(not(target_arch = "wasm32"))`-
# gated).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.11"
rfd = "0.17"
directories = "6"
# clap 4 styled `--help` + `help <topic>` + shell completions (unconditional);
# the interactive ratatui TUI browser is behind the default-on `help-tui` feature.
clap = { version = "4", features = ["derive", "color", "cargo"] }
clap_complete = "4"
anstyle = "1"
ratatui = { version = "0.30", optional = true }
rustysnes-script = { path = "../rustysnes-script", version = "1.2.0", optional = true }
rustysnes-netplay = { path = "../rustysnes-netplay", version = "1.2.0", optional = true }
rustysnes-cheevos = { path = "../rustysnes-cheevos", version = "1.2.0", optional = true }

# `emu-thread`'s Linux-only best-effort thread-priority elevation (`emu_thread.rs`'s
# `elevate_thread_priority`) — three scheduler syscalls, ported from RustyNES's own prior art.
[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }

# wasm32 target deps. The chip stack is `no_std + alloc`, so the browser build
# only needs the wasm-bindgen + web-sys bridge here.
# GOTCHA: the wasm-bindgen CLI pin in web/Trunk.toml MUST equal the resolved
# wasm-bindgen LIBRARY version in Cargo.lock (grep -A1 'name = "wasm-bindgen"').
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlElement", "HtmlCanvasElement",
    "HtmlInputElement", "File", "FileList", "FileReader", "ProgressEvent",
    "Event", "EventTarget", "KeyboardEvent", "Navigator",
    "CanvasRenderingContext2d", "ImageData", "Storage",
    "AudioContext", "AudioNode", "AudioDestinationNode",
    "AudioWorklet", "AudioWorkletNode", "MessageEvent", "MessagePort",
    "ScriptProcessorNode", "AudioProcessingEvent", "AudioBuffer",
    "Blob", "BlobPropertyBag", "Url",
] }

[dev-dependencies]
# Validate the embedded WGSL at test time with the same naga wgpu uses at run
# time, so a shader error fails CI instead of aborting the app.
naga = { version = "29", features = ["wgsl-in"] }
